# mlops-zoomcamp

./: .gitignore  README-custom.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
01-intro/: duration-prediction-custom.ipynb  duration-prediction.ipynb  homework.ipynb
01-intro/notebooks/: duration-prediction.ipynb  homework.ipynb
02-experiment-tracking/: README.md  aws_conf_yezer.md  duration-prediction.ipynb  duration-prediction_custom.ipynb  homework.ipynb  model-registry.ipynb  model-registry_custom.ipynb
02-experiment-tracking/running-mlflow-examples/: scenario-01.ipynb  scenario-02.ipynb  scenario-03.ipynb  scenario-2-custom.ipynb  scenario-3-custom-aws.ipynb  scenario-4-custom.ipynb
03-orchestration/: duration-prediction.py  homework3.py  homework3_create_model_folder.py  homework3_find_load_logged_model.py  homework3_load_data.py  homework3_notes.txt  homework3_train_model.py  homework3_transform_data.py
04-deployment/streaming-custom/: Dockerfile  Lambda_Kinesis_setting.md  README.md  debug_kinesis_data.py  lambda_function.py  requirements.txt  test_docker.py  test_kinesis_commands.md
04-deployment/web-service-custom/: Dockerfile  README.md  predict.py  requirements.txt
04-deployment/web-service-mlflow-custom/: Dockerfile  README.md  predict.py  random-forest.ipynb  test.py
cohorts/2025/02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
cohorts/2025/04-deployment/homework/: starter.ipynb
dags/: airflow_config.txt  dag_duration_prediction.py  dag_test.py
notebooks/: duration-prediction.ipynb
