#TODO:
## Update to the project name
## It is needed to have src in root folder to avoid error warnings

[project]
name = "mlops-zoomcamp" 
version = "0.1.0"
description = "Add your description here" #TODO: Update to the project name
authors = [{ name = "Yezer Gonzalez", email = "yezergm@gmail.com" }]
readme = "README.md"
keywords = ['Python', 'template', 'uv']
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto>=2.49.0",
    "fastparquet>=2024.11.0",
    "hyperopt>=0.2.7",
    "ipykernel",
    "ipywidgets",
    "jupyter>=1.1.1",
    "mlflow>=2.22.0",
    "mypy",
    "pandas",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.1",
]


[tool.mypy]
strict = true
ignore_missing_imports = true
allow_untyped_globals = false
allow_redefinition = true
check_untyped_defs = true
color_output = true
error_summary = true
pretty = true

[tool.ruff]
target-version = "py312" 
line-length = 120
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
